--- a/sections/references.bib
+++ b/sections/references.bib
@@ -212,8 +212,20 @@ booktitle = {Neural computation}
 
 @misc{lstmblog,
 author = {Christopher Olah},
+title = {Understanding LSTM Networks},
 year = {2015},
 number = {August 27},
 type = {Blog},
 howpublished = {\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
  }
+ 
+@misc {relufig,
+title = {Neural networks},
+howpublished = {\url{https://ml4a.github.io/ml4a/neural_networks/}}
+}
+
+@misc{fig:sigmoid,
+title = { The logistic curve},
+author = {Qef},
+howpublished = {\url{https://commons.wikimedia.org/w/index.php?curid=4310325}}
+}
