--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 %\usepackage{indentfirst}
 
 % other packages
-\usepackage{standalone}
+%\usepackage{standalone}
 \usepackage{array}
 \usepackage{subfigure}
 \usepackage{graphicx}
