--- a/sections/references.bib
+++ b/sections/references.bib
@@ -229,3 +229,11 @@ title = { The logistic curve},
 author = {Qef},
 howpublished = {\url{https://commons.wikimedia.org/w/index.php?curid=4310325}}
 }
+
+@book{reinflearning,
+  Author = {Richard S. Sutton and Andrew G. Barto},
+  Title = {Reinforcement Learning: An Introduction (Adaptive Computation and Machine Learning)},
+  Publisher = {A Bradford Book},
+  Year = {1998},
+  ISBN = {0262193981},
+}
